--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,55 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Front End Web 100</title>
+    <title>Tip Calculator</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
+        crossorigin="anonymous">
+
 </head>
 
 <body>
     <header>
-        <h1>Front End Web 100 Starter</h1>
-        <h2>Progressive ITU</h2>
+        <h1>Tip Calculator</h1>
     </header>
     <main>
-        
+        <div class="input-group">
+            <div class="input-group-prepend">
+                <div class="input-group-text" id="btnDollarSign">$</div>
+            </div>
+            <input type="text" class="form-control" placeholder="$0.00" aria-label="Input group example" aria-describedby="btnTotalAmount">
+        </div>
+        <div class="btn-group" role="group" aria-label="Basic example">
+            <button type="button" id="tipTen" class="btn btn-secondary">10%</button>
+            <button type="button" id="tipFifteen" class="btn btn-secondary">15%</button>
+            <button type="button" id="tipTwenty" class="btn btn-secondary">20%</button>
+          </div>
+          <span class="tip-amount-percent">You are tipping <span id="tipPercent"></span>%</span>
+
+          <div class="card">
+            <div class="card-body">
+              Bill Amount: $ <span id="billAmount"></span>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-body">
+              Tip Percentage: <span id="tipPercent"></span>%
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-body">
+              Amount of tip: $<span id="tipTotal"></span>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-body total-paid">
+              Total to be paid: $<span id="totalToPay"></span>
+            </div>
+          </div>
+          
     </main>
 </body>
 
